Hide multi-drive tabs temporary

--- a/app/driveshare.html
+++ b/app/driveshare.html
@@ -21,7 +21,7 @@
 					</div>
 				</header>
 
-				<div class="row">
+				<div class="tab-list row">
 					<div class="col-xs-12">
 					  <ul class="nav nav-tabs" role="tablist">
 						<li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Drive #1</a></li>
