--- a/app/driveshare.html
+++ b/app/driveshare.html
@@ -25,7 +25,7 @@
 					<div class="col-xs-12">
 					  <ul class="nav nav-tabs" role="tablist">
 						<li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Drive #1</a></li>
-						<li role="presentation"><a href="#newDrive" aria-controls="newDrive" role="tab" data-toggle="tab">+ Add New Drive</a></li>
+						<li role="presentation"><a href="#" id="btnAddTab">+ Add New Drive</a></li>
 					  </ul>
 					</div>
 				</div>
@@ -85,8 +85,6 @@
 							</div>
 						</div>
 					</section>
-				</div>
-				<div role="tabpanel" class="tab-pane fade" id="newDrive"></div>
 				</div>
 
 				<footer>
