finished the UI

--- a/app/driveshare.html
+++ b/app/driveshare.html
@@ -37,7 +37,7 @@
 				</div>
 
 				<div class="tab-content">
-				<div role="tabpanel" class="tab-pane fade in active" id="home">
+				<!--<div role="tabpanel" class="tab-pane fade in active" id="home">
 					<section class="main">
 						<div class="row">
 							<div class="form-group col-xs-12">
@@ -91,7 +91,54 @@
 							</div>
 						</div>
 					</section>
-				</div>
+				</div> -->
+				<div class="tab-pane fade in active" id="tabPage1" role="tabpanel">
+    <section class="main">
+        <div class="row">
+            <div class="form-group col-xs-12">
+                <label class="control-label" for="address">Payout Address</label>
+                <div class="pull-right"> <span id="amount"><a class="js-external-link" href="https://counterwallet.io/">Create New Address</a></span> </div>
+                <input class="form-control address input-address" data-error="Payout address is required" id="address" name="address" placeholder="Enter your SJCX Address" required="" type="text"> </div>
+        </div>
+        <div class="row">
+            <div class="form-group col-xs-12">
+                <label class="control-label" for="location">Storage Location</label>
+                <div class="pull-right"> <span id="drive-space"></span> </div>
+                <div class="row">
+                    <div class="col-xs-8">
+                        <input class="form-control directory" name="location" placeholder="Select where to keep the data" type="text"> </div>
+                    <div class="col-xs-4">
+                        <button class="btn btn-blue btn-block browse" id="browse" type="button">Browse</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="form-group col-xs-12">
+                <label class="control-label" for="storage">Storage Size</label>
+                <div class="row">
+                    <div class="col-xs-8">
+                        <input class="form-control size" min="0" name="storage" placeholder="Set amount of space to share" type="number"> </div>
+                    <div class="col-xs-4">
+                        <select class="form-control size-unit">
+                            <option> MB </option>
+                            <option selected=""> GB </option>
+                            <option> TB </option>
+                        </select>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="action">
+        <div class="row">
+            <div class="col-xs-12">
+                <button class="btn btn-block ladda-button" data-style="expand-left" id="start"><span id="start-label">START</span>
+                </button>
+            </div>
+        </div>
+    </section>
+</div>
 
 				<footer>
 					<div class="row">
