Better error validation, giving instructions for user to download .NET framework if dataserv-client errors out.

--- a/app/driveshare.html
+++ b/app/driveshare.html
@@ -183,6 +183,38 @@
 			</div>
 		</div>
 	</div>
+
+	<div class="modal fade text-center" id="modalValidateError" tabindex="-1" role="dialog" aria-labelledby="modalSetup">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h4 class="modal-title">Error</h4>
+				</div>
+				<div class="modal-body">There was an issue running dataserv-client, please let us know on <a href="https://github.com/Storj/driveshare-gui/issues" class="js-external-link">github</a>.</div>
+				<div class="modal-footer">
+					<div class="btn-group">
+						<button type="button" class="btn btn-blue" data-dismiss="modal" onclick="location.reload();">Reload</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="modal fade text-center" id="modalValidateErrorWindows" tabindex="-1" role="dialog" aria-labelledby="modalSetup">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h4 class="modal-title">Error</h4>
+				</div>
+				<div class="modal-body">There was an issue running dataserv-client, make sure you have <a href="http://www.microsoft.com/net" class="js-external-link">Microsoft .NET Framework</a> installed and try again. If the issue persists let us know on <a href="https://github.com/Storj/driveshare-gui/issues" class="js-external-link">github</a>.</div>
+				<div class="modal-footer">
+					<div class="btn-group">
+						<button type="button" class="btn btn-blue" data-dismiss="modal" onclick="location.reload();">Reload</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 	
 	<div class="modal fade text-center" id="modalSetupUnsupported" tabindex="-1" role="dialog" aria-labelledby="modalSetupUnsupported">
 		<div class="modal-dialog" role="document">
