Changed UI to match Steam Miner look

--- a/app/driveshare.html
+++ b/app/driveshare.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>DriveShare</title>
+<title>Steam Miner</title>
 <head>
 	<link href="lib/css/bootstrap.min.css" rel="stylesheet">
 	<link href="lib/css/style.css" rel="stylesheet">
@@ -16,7 +16,7 @@
 				<header>
 					<div class="row">
 						<div class="col-xs-12">
-							<h2 class="title"><a href="http://driveshare.org/" class="js-external-link">DriveShare</a></h2>
+							<h2 class="title"><a href="http://steaminer.com" class="js-external-link">Steam Miner</a></h2>
 						</div>
 					</div>
 				</header>
@@ -24,7 +24,7 @@
 				<div class="tab-list row">
 					<div class="col-xs-12">
 					  <ul class="nav nav-tabs" role="tablist">
-						<li role="presentation"><a href="#" id="btnAddTab">+ Add New Drive</a></li>
+						<li role="presentation"><a href="#" id="btnAddTab">+ Add New Miner</a></li>
 					  </ul>
 					</div>
 				</div>
@@ -39,7 +39,7 @@
 							<p><a href="#" onclick="requirejs('./modules/logs').showLogs();return false;">View Logs</a></p>
 						</div>
 						<div class="col-xs-4 text-center">
-							<p><a href="http://storj.io/" class="js-external-link">Powered by Storj</a></p>
+							<p><a href="http://storj.io/" class="js-external-link">Powered by SM</a></p>
 						</div>
 						<div class="col-xs-4 text-right">
 							<p><a href="http://slack.storj.io/" class="js-external-link">Need Help?</a></p>
